# gl4_tutorials

./: .gitignore  .gitmodules  README.md  meson.build
00/: .gitignore  main.cpp  meson.build  shader1.frag  shader1.vert  shader2.frag  shader2.vert  vertex.shader
01/: main.cpp  meson.build  shader.frag  shader.vert  shader_manager.hpp
02/: main.cpp  meson.build  shader.frag  shader.vert
03/: main.cpp  matrix.hpp  meson.build
04/: main.cpp  meson.build  shader.frag  shader.vert
common/: linear_square_array.hpp  logger.hpp  matrix.hpp  shader_manager.hpp
shared/: matrix.hpp  shader_manager.hpp  vector.hpp
tests/: matrix_test.cpp  meson.build  test_linear_square_array.cpp  test_matrix.cpp
tools/: dumb_logger.hpp  file_logger.hpp
