test_linear_square_array = executable('test_linear_square_array', 'test_linear_square_array.cpp', include_directories: project_directory)
test_matrix = executable('test_matrix', 'test_matrix.cpp', include_directories: project_directory)

test('linear square array', test_linear_square_array)
test('matrix', test_matrix)
